# OCR-Translate-Sketch

./: .gitignore  CONFIG.md  LICENSE  README.md  README.zh.md  config.py  config.yaml  event_manager.py  logging_utils.py  main.py  ocr_processor.py  pyproject.toml  ui_manager.py
src/: event_manager.py  logging_utils.py  main.py  ocr_processor.py  translator.py
tests/: test_config.py  test_logging_utils.py  test_translator.py
